--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <title>My programing carier</title>
 </head>
 <body>
-    <h1>welcome to</h1><h1>My fantasized world</h1>
+ <section>
+    <div class="half-width">
+        <h1>Welcome to</h1><h1><span class="colour-code">My fantasized</span> world</h1>
+        <h3>A little dream</h3>
+        <p>Hello there my-self marzuk.I have a big dream of being a huge proggramar one day.To be honest i am not even close to my dream.But i am taking step everyday and working hard for the next step and i will not stop working until the final step.And hopefully i will make my dream come true one day.And also a big thanks to my freinds i am not gonna say their name but inspire me a lot.And last but not least thanks to my mother for helping with all the support i needed to achive my dream.This is marzuk signing of!</p>
+       </div>
+       <div class="half-width">
+        <img src="safari-designify (1).png" alt="">
+       </div>
+ </section>
 </body>
 </html>
