--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 >
     <title>My programing carier</title>
 </head>
@@ -18,6 +19,7 @@
         <h1>Welcome to</h1><h1><span class="colour-code">My fantasized</span> world</h1>
         <h3>A little dream</h3>
         <p>Hello there my-self marzuk.I have a big dream of being a huge proggramar one day.To be honest i am not even close to my dream.But i am taking step everyday and working hard for the next step and i will not stop working until the final step.And hopefully i will make my dream come true one day.And also a big thanks to my freinds i am not gonna say their name but inspire me a lot.And last but not least thanks to my mother for helping with all the support i needed to achive my dream.This is marzuk signing of!</p>
+        <a  target="_blank" href="https://www.instagram.com/uc_hi_ha_madara/">Hire me</a>
        </div>
        <div class="half-width">
         <img src="safari-designify (1).png" alt="">
