--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
        <div class="half-width">
         <img src="safari-designify (1).png" alt="">
        </div>
+       <p>test subject</p>
  </section>
 </body>
 </html>
