--- a/index.html
+++ b/index.html
@@ -9,22 +9,49 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 
     <title>My programing carier</title>
 </head>
 <body>
- <section>
+ <section class="bg-image">
     <div class="half-width">
         <h1>Welcome to</h1><h1><span class="colour-code">My fantasized</span> world</h1>
         <h3>A little dream</h3>
         <p>Hello there my-self marzuk.I have a big dream of being a huge proggramar one day.To be honest i am not even close to my dream.But i am taking step everyday and working hard for the next step and i will not stop working until the final step.And hopefully i will make my dream come true one day.And also a big thanks to my freinds i am not gonna say their name but inspire me a lot.And last but not least thanks to my mother for helping with all the support i needed to achive my dream.This is marzuk signing of!</p>
-        <a class="bal" target="_blank" href="https://www.instagram.com/uc_hi_ha_madara/">Hire me</a>
+        <a class="bal" target="_blank" href="https://www.instagram.com/uc_hi_ha_madara/">Follow me</a>
        </div>
        <div class="half-width">
         <img src="safari-designify (1).png" alt="">
        </div>
-       <p>test subject</p>
+
+ </section>
+
+ <section class="second-para">
+   <div class="half-width">
+    <img src="Untitled (1).png" alt="">
+   </div>
+<div class="half-width">
+    <h1>
+        My story
+    </h1>
+    <h3>How i get into <span class="colour-code">proggraming</span>?</h3>
+    <div>
+        <p>
+            At first i have mention my freinds because of them i learned about my passion and i what i want to be.I was never this passionate about anything.I love proggraming and i will do it till the end.And also a thing i want to add that i am learning proggraming not because i will earn a big ammout of money ,because i love it.
+        </p>
+        <a class="bal" target="_blank" href="https://www.facebook.com/syedistiaq.ahmedmarzuk">Follow me</a>
+        <i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>
+
+<script>
+function myFunction(x) {
+  x.classList.toggle("fa-thumbs-down");
+}
+</script>
+    </div>
+</div>
  </section>
 </body>
 </html>
