first-web-devloping-done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>My programing carier</title>
 </head>
 <body>
- <section class="bg-image">
+ <section class="bg-image kahini">
     <div class="half-width">
         <h1>Welcome to</h1><h1><span class="colour-code">My fantasized</span> world</h1>
         <h3>A little dream</h3>
@@ -29,7 +29,7 @@
 
  </section>
 
- <section class="second-para">
+ <section class="second-para kahini">
    <div class="half-width">
     <img src="Untitled (1).png" alt="">
    </div>
@@ -53,5 +53,27 @@ function myFunction(x) {
     </div>
 </div>
  </section>
+ <section class="fokira">
+    <h1 class="halka-dan">Experences</h1>
+ <div class="kahini">
+    <div id="border-color" class="box">
+        <h1 id="small" class="colour-code">
+         Full-stack developer
+        </h1>
+        <h3>
+         <u>Year:2022|starting programming journey</u>
+        </h3>
+        <p>
+         By 2023 i have a goal to be a full stack developer.Then i can work on my own dream project.Furthermore i am loking forward to build a website for my own company.It is a honour to be a part of Zoombie.
+        </p>
+        </div>
+        <div id="border-color2" class="box">
+         <h1 id="small" class="colour-code">Current session</h1>
+         <h3><u>Year:2022|On the way</h3></u>
+         <p>By the i am writing this i know a little bit about html and css.I am not even in intemediate level but already i faced some moments where i almost give up.But nothing comes with a easy route.So i must not stop until i see myself as a succesfull proggramar</p>
+        </div>
+ </div>
+ </section>
+<footer><p>© My fantasized world 2022, a Programming Hero initiative.</p></footer>
 </body>
 </html>
